--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 local_settings.py
 .idea/
 team/migrations/*
+media/team/product/*
+!media/team/product/default.jpg
 !team/migrations/__init__.py
 student/migrations/*
 !student/migrations/__init__.py
