--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 *.pyc
 local_settings.py
 .idea/
-team/migrations/*
+team/migrations
 media/team/product/*
 !media/team/product/default.jpg
 !team/migrations/__init__.py
-student/migrations/*
+student/migrations
 !student/migrations/__init__.py
 whoosh_index/*
 media
